--- a/cleanup.ipynb
+++ b/cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,21 +55,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       Avg_temp\n",
+       "year           \n",
+       "1953  15.421083\n",
+       "1954  15.230583\n",
+       "1955  15.174333\n",
+       "1956  15.106000\n",
+       "1957  15.374083"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Avg_temp</th>\n    </tr>\n    <tr>\n      <th>year</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1953</th>\n      <td>15.421083</td>\n    </tr>\n    <tr>\n      <th>1954</th>\n      <td>15.230583</td>\n    </tr>\n    <tr>\n      <th>1955</th>\n      <td>15.174333</td>\n    </tr>\n    <tr>\n      <th>1956</th>\n      <td>15.106000</td>\n    </tr>\n    <tr>\n      <th>1957</th>\n      <td>15.374083</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
    "source": [
     "# Explore global temp data and clean/add as necesary\n",
     "min_year = global_temp_df[\"year\"].max()\n",
     "temp_filtered_df = global_temp_df[(global_temp_df['year'] >= 1953) & (global_temp_df['year'] <= 2015)]\n",
     "temp_cleaned_df = temp_filtered_df[['year','LandAndOceanAverageTemperature']]\n",
     "temp_gp = temp_cleaned_df.groupby(\"year\").mean()\n",
-    "temp_df = temp_gp"
+    "temp_df = temp_gp\n",
+    "temp_df = temp_df.rename(columns={\"LandAndOceanAverageTemperature\":\"Avg_temp\"})\n",
+    "temp_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +107,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CO2_Emissions_MT</th>\n    </tr>\n    <tr>\n      <th>year</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1953</th>\n      <td>105.821009</td>\n    </tr>\n    <tr>\n      <th>1954</th>\n      <td>107.817526</td>\n    </tr>\n    <tr>\n      <th>1955</th>\n      <td>114.516686</td>\n    </tr>\n    <tr>\n      <th>1956</th>\n      <td>121.058732</td>\n    </tr>\n    <tr>\n      <th>1957</th>\n      <td>122.532814</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 20
     }
    ],
    "source": [
@@ -107,25 +127,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "      incident_type\n",
-       "year               \n",
-       "1953             12\n",
-       "1954             15\n",
-       "1955             16\n",
-       "1956             15\n",
-       "1957             15"
+       "      disaster_count\n",
+       "year                \n",
+       "1953              12\n",
+       "1954              15\n",
+       "1955              16\n",
+       "1956              15\n",
+       "1957              15"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>incident_type</th>\n    </tr>\n    <tr>\n      <th>year</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1953</th>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>1954</th>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1955</th>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>1956</th>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1957</th>\n      <td>15</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>disaster_count</th>\n    </tr>\n    <tr>\n      <th>year</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1953</th>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>1954</th>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1955</th>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>1956</th>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>1957</th>\n      <td>15</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 18
     }
    ],
    "source": [
@@ -136,12 +156,13 @@
     "disaster_filtered_df  = disaster_filtered_df[(disaster_filtered_df.incident_type!= \"Other\") & (disaster_filtered_df.incident_type!= \"Earthquake\") & (disaster_filtered_df.incident_type!= \"Volcano\") & (disaster_filtered_df.incident_type!= \"Toxic Substances\") & (disaster_filtered_df.incident_type!= \"Dam/Levee Break\") & (disaster_filtered_df.incident_type!= \"Fishing Losses\") & (disaster_filtered_df.incident_type!= \"Human Cause\") & (disaster_filtered_df.incident_type!= \"Terrorist\") & (disaster_filtered_df.incident_type!= \"Chemical\") & (disaster_filtered_df.incident_type!= \"Biological\")]\n",
     "disasters_df = disaster_filtered_df.groupby(\"year\").count()\n",
     "disasters_df = disasters_df[['incident_type']]\n",
+    "disasters_df = disasters_df.rename(columns={\"incident_type\":\"disaster_count\"})\n",
     "disasters_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
